fixed navbar z-index and edited .text/.text:hover attributes:

--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,7 @@ body {
   justify-content: flex-start;
   min-width: 100rem;
   padding: 1rem;
+  z-index: 1;
 }
 .nav-link {
   margin-left: 3rem;
@@ -29,8 +30,11 @@ a:visited {
   color: black;
 }
 
+
+
 a {
   text-decoration: none;
+  position:relative;
 }
 /* .project-image {
   text-decoration: none;
@@ -116,6 +120,32 @@ h2 {
 .project-tile {
   padding: 20px;
 }
+
+/* .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
+} */
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
 @media only screen and (max-width: 600px) {
   .project-flex-middle {
     display: flex;
